stylesheets/stylesheet.css
a.back-to-top {
	display: none;
	position: fixed;
	z-index: 999;
	right: 20px;
	bottom: 20px;
}

.face-corbin,
.face-tanya {
  border: 2px solid white;
  width: 144px;
  height: 144px;
}

/* Other */

.text-fluid {
  text-align: center;
}

@media (min-width: 768px) {
  .text-fluid {
    text-align: left;
  }
}

/* Map */
.show-map {
  cursor: pointer;
}

#reset-map {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}

img.adp-marker {
  margin: 5px;
}

#map {
  width: 100%;
  height: 300px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
/* ---- */

.panel-default.panel-map,
.panel-default.panel-map > .panel-heading {
  background-color: transparent;
  border-color: transparent;
  box-shadow: none;
}

.panel-default.panel-map {
  color: #fff;
  margin: 0;
	margin-top: 20px;
}

.panel-default.panel-map > .panel-heading {
  color: #ccc;
}

.panel-default.panel-map > .panel-heading:hover {
  color: #fff;
  background-image: linear-gradient(to right, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.85), rgba(51, 51, 51, 0));
}

.panel-map .panel-title {
  font-size: inherit;
  font-weight: bold;
}

/* ----- */

.registry-img {
  margin-left: auto;
  margin-right: auto;
  padding: 20px;
  border: 0px;
	max-width: 450px;
	width: 100%;
}

.registry-img:hover {
  border-bottom: 2px solid #fff;
  border-bottom-color: rgba(255,255,255,.25);
}

/* Header font centering */

.cover-heading {
  text-align: center;
  font-size: 500%;
}

/* other page spacer */
@media (min-width: 768px) {
  .spacer {
    height: 25px;
  }
}

@media (min-width: 992px) {
  .spacer {
    height: 50px;
  }
}

@media (min-width: 1200px) {
  .spacer {
    height: 75px;
  }
}

/* RSVP page styles */

/* Custom default button */



/* ----end RSVP page styles--------- */

.site-wrapper {
  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
}

/*
 * Footer
 */

.footer {
  color: #999; /* IE8 proofing */
  color: rgba(255,255,255,.5); /* should this be commented?*/
  background-color: transparent;
  /*background-color: rgba(0,0,0,.5);*/
}

/* Links */
a {
  color: #ccc;
}

a:focus,
a:hover {
  color: #fff;
}

/* Custom hr
Gradient: transparent - color - transparent */
.hr-custom {
  border: 0;
  height: 2px;
  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
}

/* Fonts */

html,
body {
  font-family: 'Raleway', serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Berkshire Swash', serif;
}

.header-font {
  font-family: 'Berkshire Swash', serif;
}

.body-font {
  font-family: 'Raleway', serif;
}

/* Colors */

body {
  color: #fff;
  /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
  background-color: #333;
}

/* Cycling background image ---------------------- */
body {
  /*background-image: url('../images/photo1.jpg');*/
  background-attachment: fixed;
  background-position: center center;
  background-size: cover;
}


/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
  padding-top: 50px;
}

body.index {
  margin-bottom: 0;
}

@media (min-width: 992px) {
  body {
    padding-top: 0;
  }
}

body > .container {
  padding-left: 15px;
  padding-right: 15px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  /*background-color: #f5f5f5;*/
}

.footer p {
  margin: 20px 0;
  text-align: center;
}

.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
}


.cover-spacer {
  height: 55%;
}

.container.index,
body.index,
html.index {
  height: 100%;
}

